# gp

./: .gitignore  CMakeLists.txt
include/kernels/: kernel.hpp  rbf_kernel.hpp
include/optimization/: cost_functors.hpp
include/process/: gaussian_process.hpp
include/utils/: plot_1d.hpp
src/process/: gaussian_process.cpp
test/: test_function_approx.cpp
